# Notes-And-Tutorials

./: .gitignore  HowDoIWroteMakefiles  LICENSE  README.md
build-tools/: CMakeLists.txt  MakefileExample  NewMakefileExample
dev-tools/: Git_And_GitHub.md  my_vimrc
languages/c++/: Types.md
languages/c++/count_alphanum/: Makefile  main.cpp
languages/c++/project-skeleton/: .ycm_extra_conf.py  Makefile  main.cpp
